2000-09-28  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* sol-thread.c (ps_pdmodel):  Return PR_MODEL_UNKNOWN instead of
	PS_ERR if exec_bfd is not yet open.

2000-09-28  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* target.c (target_signal_from_host, do_target_signal_to_host):
	Add support for Solaris realtime signals.

2000-09-27  Kevin Buettner  <kevinb@redhat.com>

	* os9kread.c (os9k_symfile_read, os9k_end_psymtab): Protoize.
	* osfsolib.c (find_solib): Protoize.

2000-09-25  Kevin Buettner  <kevinb@redhat.com>

	* ns32knbsd-nat.c (fetch_core_registers): Protoize.
	* ocd.c (ocd_xfer_memory): Protoize.

2000-09-25  Andrew Cagney  <ac131313@cygnus.com>

	* MAINTAINERS: Add Mark Kettenis to ``Blanket Write Privs'' list.

2000-09-24  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* rs6000-tdep.c (rs6000_pop_frame):  Use PC_IN_CALL_DUMMY to test
	for call dummy instead of accessing stop_stack_dummy, which does
	not work if we `return' from a stop in a call dummy.
	(rs6000_gdbarch_init):  Use generic_save_dummy_frame_tos for
	dummy_frame_tos function to make PC_IN_CALL_DUMMY work.

2000-09-23  Kevin Buettner  <kevinb@redhat.com>

	* mdebugread.c (mdebug_next_symbol_text): Protoize.
	* monitor.c (monitor_xfer_memory): Protoize.

2000-09-22  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* i386-linux-nat.c (OLD_CANNOT_FETCH_REGISTER,
	OLD_CANNOT_FETCH_REGISTER):  New definitions for accessible registers
	when accessing the registers via the U area.
	(fetch_register, store_register):  Use them.
	(cannot_fetch_register, cannot_store_register):  New functions,
	all registers should be accessible if we have GETREGS support.
	* config/i386/nm-linux.h:  Use cannot_fetch/store_register for
	CANNOT_FETCH/STORE_REGISTER definitions.

2000-09-06  Fred Fish  <fnf@cygnus.com>

	* infttrace.c (update_thread_state_after_attach): Pass address
	of ttstate_t object, not the object itself.

2000-09-18  Mark Kettenis  <kettenis@gnu.org>
